--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="src/home.css" />
+    <link rel="stylesheet" type="text/css" href="src/home.css" />
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
   </head>
   <body>
@@ -38,7 +38,7 @@
         <div class="location">
           <h1>
             PARIS, <br />
-            <span class="country" id="country"> France</span>
+            <span class="hour"> 8:30pm</span>
           </h1>
         </div>
 
@@ -53,7 +53,7 @@
 
       <div class="center-info">
         <div class="sun-icon">
-          <i class="bx bx-sun"></i>
+          <i class="bx bx-sun" id="weather-icon"></i>
         </div>
         <h3>25ºC</h3>
         <h4>Sunny</h4>
