mainly HTML corrections

--- a/index.html
+++ b/index.html
@@ -52,16 +52,18 @@
       <br />
 
       <div class="center-info">
-        <div class="sun-icon">
-          <i class="bx bx-sun" id="weather-icon"></i>
-        </div>
-        <h3>25ºC</h3>
+        <h5></h5>
+        <h3>
+          <strong>25</strong> <small class="units">ºC|<a href="$">ºF</a></small>
+        </h3>
         <h4>Sunny</h4>
         <br />
-        <div class="p-h-w">
-          <p>Precipitation: <span class="precipitation">4%</span></p>
-          <p>Humidity: <span class="humidity">34%</span></p>
-          <p>Wind Speed: <span class="windspeed">6km/h</span></p>
+        <div class="col-md-6">
+          <ul>
+            <li>Precipitation: 0%</li>
+            <li>Humidity: 73%</li>
+            <li>Wind: 2kh/h</li>
+          </ul>
         </div>
 
         <ul class="days-list">
