Add link to conversion C & F

--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
         <h5>☼</h5>
         <h3>
           <strong id="temperature">25</strong>
-          <small class="units">ºC|<a href="$">ºF</a></small>
+          <small class="units"
+            ><a href="#" class="active" id="celsius-link">ºC</a>|
+            <a href="$" id="fahrenheit-link">ºF</a></small
+          >
         </h3>
         <h4 id="description">Clear</h4>
         <br />
