--- a/index.html
+++ b/index.html
@@ -67,38 +67,7 @@
           </ul>
         </div>
 
-        <ul class="days-list">
-          <li>
-            <i class="bx bx-cloud"></i>
-            <span>Sat</span>
-            <span class="day-temp">23ºC</span>
-          </li>
-          <li>
-            <i class="bx bx-sun"></i>
-            <span>Sun</span>
-            <span class="day-temp">23ºC</span>
-          </li>
-          <li>
-            <i class="bx bx-cloud-lightning"></i>
-            <span>Mon</span>
-            <span class="day-temp">28ºC</span>
-          </li>
-          <li>
-            <i class="bx bx-cloud-light-rain"></i>
-            <span>Tue</span>
-            <span class="day-temp">02ºC</span>
-          </li>
-          <li>
-            <i class="bx bx-wind"></i>
-            <span>Wed</span>
-            <span class="day-temp">14ºC</span>
-          </li>
-          <li>
-            <i class="bx bx-cloud-snow"></i>
-            <span>Wed</span>
-            <span class="day-temp">14ºC</span>
-          </li>
-        </ul>
+        <div class="weatherForecast" id="forecast"></div>
       </div>
 
       <p>
